white gap fix attempt no 7

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body, html{
 }
 main{
     flex: 1;
+    background: inherit;
 }
 footer{
     display: flex;
